--- a/README
+++ b/README
@@ -4,8 +4,7 @@ NAME
 DESCRIPTION
 	libsha2 is a bit-oriented implementation of the SHA2-family
 	with support for SHA-224, SHA-256, SHA-384, SHA-512,
-	SHA-512/224, and SHA-512/256, state marshalling, secure
-	erasure of sensitive data, and HMAC.
+	SHA-512/224, and SHA-512/256, and state marshalling
 
 RATIONALE
 	This should be obvious.
