Add marshal and unmarshal functions
Signed-off-by: Mattias Andrée <maandree@kth.se>

--- a/libsha2_init.3
+++ b/libsha2_init.3
@@ -60,5 +60,7 @@ None.
 None.
 .SH SEE ALSO
 .BR libsha2_digest (3),
+.BR libsha2_marshal (3),
 .BR libsha2_sum_fd (3),
+.BR libsha2_unmarshal (3),
 .BR libsha2_update (3)
