--- a/libsha2_sum_fd.3
+++ b/libsha2_sum_fd.3
@@ -29,7 +29,7 @@ with the selected
 .IR algorithm .
 The resulting hash is stored in binary
 format in
-.I hashsum .
+.IR hashsum .
 The user must make sure that
 .I hashsum
 is sufficiently large, which means at
