Add HMAC and use void * instead of char * for binary data
Signed-off-by: Mattias Andrée <maandree@kth.se>

--- a/libsha2_behex_lower.3
+++ b/libsha2_behex_lower.3
@@ -5,7 +5,7 @@ libsha2_behex_lower \- Convert binary to lower case hexadecimal
 .nf
 #include <libsha2.h>
 
-void libsha2_behex_lower(char *restrict \fIoutput\fP, const char *restrict \fIhashsum\fP, size_t \fIn\fP);
+void libsha2_behex_lower(char *restrict \fIoutput\fP, const void *restrict \fIhashsum\fP, size_t \fIn\fP);
 .fi
 .PP
 Link with
