--- a/libsha2_behex_upper.3
+++ b/libsha2_behex_upper.3
@@ -5,7 +5,7 @@ libsha2_behex_upper \- Convert binary to upper case hexadecimal
 .nf
 #include <libsha2.h>
 
-void libsha2_behex_upper(char *restrict \fIoutput\fP, const char *restrict \fIhashsum\fP, size_t \fIn\fP);
+void libsha2_behex_upper(char *restrict \fIoutput\fP, const void *restrict \fIhashsum\fP, size_t \fIn\fP);
 .fi
 .PP
 Link with
