--- a/libsha2_unhex.3
+++ b/libsha2_unhex.3
@@ -5,7 +5,7 @@ libsha2_unhex \- Covert hexadecimal to binary
 .nf
 #include <libsha2.h>
 
-void libsha2_unhex(char *restrict \fIoutput\fP, const char *restrict \fIhashsum\fP);
+void libsha2_unhex(void *restrict \fIoutput\fP, const char *restrict \fIhashsum\fP);
 .fi
 .PP
 Link with
