--- a/libsha2_hmac_digest.3
+++ b/libsha2_hmac_digest.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_HMAC_DIGEST 3 2019-02-10 libjson
+.TH LIBSHA2_HMAC_DIGEST 3 2019-02-10 libsha2
 .SH NAME
 libsha2_hmac_digest \- Get the result of a HMAC-SHA 2 hashing
 .SH SYNOPSIS
