--- a/libsha2_hmac_state_output_size.3
+++ b/libsha2_hmac_state_output_size.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_HMAC_STATE_OUTPUT_SIZE 3 2019-02-10 libjson
+.TH LIBSHA2_HMAC_STATE_OUTPUT_SIZE 3 2019-02-10 libsha2
 .SH NAME
 libsha2_hmac_state_output_size \- Get the size of the output for a HMAC-SHA 2 algorithm
 .SH SYNOPSIS
