--- a/libsha2_state_output_size.3
+++ b/libsha2_state_output_size.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_STATE_OUTPUT_SIZE 3 2019-02-09 libjson
+.TH LIBSHA2_STATE_OUTPUT_SIZE 3 2019-02-09 libsha2
 .SH NAME
 libsha2_state_output_size \- Get the size of the output for a SHA 2 algorithm
 .SH SYNOPSIS
