--- a/libsha2_unmarshal.3
+++ b/libsha2_unmarshal.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_UNMARSHAL 3 2019-02-09 libjson
+.TH LIBSHA2_UNMARSHAL 3 2019-02-09 libsha2
 .SH NAME
 libsha2_unmarshal \- Unmarshal a SHA 2 hashing state
 .SH SYNOPSIS
