--- a/libsha2_update.3
+++ b/libsha2_update.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_UPDATE 3 2019-02-09 libjson
+.TH LIBSHA2_UPDATE 3 2019-02-09 libsha2
 .SH NAME
 libsha2_update \- Feed data into a SHA 2 algorithm
 .SH SYNOPSIS
