--- a/libsha2_behex_lower.3
+++ b/libsha2_behex_lower.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_BEHEX_LOWER 3 2019-02-09 libjson
+.TH LIBSHA2_BEHEX_LOWER 3 2019-02-09 libsha2
 .SH NAME
 libsha2_behex_lower \- Convert binary to lower case hexadecimal
 .SH SYNOPSIS
