--- a/libsha2_behex_upper.3
+++ b/libsha2_behex_upper.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_BEHEX_UPPER 3 2019-02-09 libjson
+.TH LIBSHA2_BEHEX_UPPER 3 2019-02-09 libsha2
 .SH NAME
 libsha2_behex_upper \- Convert binary to upper case hexadecimal
 .SH SYNOPSIS
