--- a/libsha2_digest.3
+++ b/libsha2_digest.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_DIGEST 3 2019-02-09 libjson
+.TH LIBSHA2_DIGEST 3 2019-02-09 libsha2
 .SH NAME
 libsha2_digest \- Get the result of a SHA 2 hashing
 .SH SYNOPSIS
