--- a/libsha2_hmac_init.3
+++ b/libsha2_hmac_init.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_HMAC_INIT 3 2019-02-10 libjson
+.TH LIBSHA2_HMAC_INIT 3 2019-02-10 libsha2
 .SH NAME
 libsha2_hmac_init \- Initialises hashing with an HMAC-SHA 2 algorithm
 .SH SYNOPSIS
