--- a/libsha2_hmac_unmarshal.3
+++ b/libsha2_hmac_unmarshal.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_HMAC_UNMARSHAL 3 2019-02-10 libjson
+.TH LIBSHA2_HMAC_UNMARSHAL 3 2019-02-10 libsha2
 .SH NAME
 libsha2_hmac_unmarshal \- Unmarshal an HMAC-SHA 2 hashing state
 .SH SYNOPSIS
