--- a/libsha2_hmac_update.3
+++ b/libsha2_hmac_update.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_HMAC_UPDATE 3 2019-02-10 libjson
+.TH LIBSHA2_HMAC_UPDATE 3 2019-02-10 libsha2
 .SH NAME
 libsha2_hmac_update \- Feed data into a HMAC-SHA 2 algorithm
 .SH SYNOPSIS
