--- a/libsha2_init.3
+++ b/libsha2_init.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_INIT 3 2019-02-09 libjson
+.TH LIBSHA2_INIT 3 2019-02-09 libsha2
 .SH NAME
 libsha2_init \- Initialises hashing with a SHA 2 algorithm
 .SH SYNOPSIS
