--- a/libsha2_marshal.3
+++ b/libsha2_marshal.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_MARSHAL 3 2019-02-09 libjson
+.TH LIBSHA2_MARSHAL 3 2019-02-09 libsha2
 .SH NAME
 libsha2_marshal \- Marshal a SHA 2 hashing state
 .SH SYNOPSIS
