--- a/libsha2_sum_fd.3
+++ b/libsha2_sum_fd.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_SUM_FD 3 2019-02-09 libjson
+.TH LIBSHA2_SUM_FD 3 2019-02-09 libsha2
 .SH NAME
 libsha2_sum_fd \- Hash a file with a SHA 2 algorithm
 .SH SYNOPSIS
