--- a/libsha2_unhex.3
+++ b/libsha2_unhex.3
@@ -1,4 +1,4 @@
-.TH LIBSHA2_UNHEX 3 2019-02-09 libjson
+.TH LIBSHA2_UNHEX 3 2019-02-09 libsha2
 .SH NAME
 libsha2_unhex \- Covert hexadecimal to binary
 .SH SYNOPSIS
