Moved to Codeberg
Signed-off-by: Mattias Andrée <m@maandree.se>

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+This repo has been moved to Codeberg and may be out of date on GitHub.
+Canonical repo: https://codeberg.org/maandree/libsha2
+
+
 NAME
 	libsha2 - SHA-2-family hashing library
 
